--- a/finance_control/finance_control/templates/dashboard/base.html
+++ b/finance_control/finance_control/templates/dashboard/base.html
@@ -4,11 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> {# esse comando ajusta a tela para zoom = 100% no responsivo/mobile. Faça o teste sem ele pra entender #}
     <link href="{{ STATIC_URL }}dashboard/plugins/mdb/css/mdb.min.css" rel="stylesheet" />
+    <link href="{{ STATIC_URL }}dashboard/css/style.css" rel="stylesheet" />
     <link href="{{ STATIC_URL }}dashboard/plugins/sb/css/sb-admin-2.min.css" rel="stylesheet" />
     <link href="{{ STATIC_URL }}dashboard/plugins/sb/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <title>Finance Control</title>
 </head>
 <body id="wrapper">
+<div id="wrapper bg-dark">
+        <!-- Sidebar -->
+        <ul class="navbar-nav bg-gradient-dark sidebar sidebar-dark accordion" id="accordionSidebar">
+
+            <!-- Sidebar - Brand -->
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+                <div class="sidebar-brand-icon rotate-n-15">
+                    <i class="fas fa-solid fa-file-invoice-dollar"></i>
+                </div>
+                <div class="sidebar-brand-text mx-3">Finance Control</div>
+            </a>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider my-0">
+
+            <!-- Nav Item - Dashboard -->
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Resumo</span></a>
+            </li>
+
+
+            <!-- Nav Item - Charts -->
+            <li class="nav-item">
+                <a class="nav-link" href="charts.html">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Cartão de Credito</span></a>
+            </li>
+
+            <!-- Nav Item - Tables -->
+            <li class="nav-item">
+                <a class="nav-link" href="tables.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Detalhado</span></a>
+            </li>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider d-none d-md-block">
+
+            <!-- Sidebar Toggler (Sidebar) -->
+            <div class="text-center d-none d-md-inline">
+                <button class="rounded-circle border-0" id="sidebarToggle"></button>
+            </div>
+
+
+        </ul>
+        <!-- End of Sidebar -->
+    </div>
+
+
 
 {% block content %}{% endblock content %}
 
